--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CYBER ETHICS</title>
     <style>
+        body{
+            padding-top: 33px;
+        }
         .paragraph,
         .content,
         .contentDescription,
